--- a/GOSim_R.ipynb
+++ b/GOSim_R.ipynb
@@ -912,6 +912,120 @@
       "Warning message in getGeneSim(g[[i]], g[[j]], similarity = \"max\", similarityTerm = \"Resnik\", :\n",
       "“Similarity matrix contains values > 1! This may happen with simlarity='funSimMax', if one gene's GO annotation is a complete subset of another gene's GO annotation.”"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  59 genes reduced to  57 \n",
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  29 genes reduced to  27 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in getGeneSim(g[[i]], g[[j]], similarity = \"max\", similarityTerm = \"Resnik\", :\n",
+      "“Similarity matrix contains values > 1! This may happen with simlarity='funSimMax', if one gene's GO annotation is a complete subset of another gene's GO annotation.”"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  59 genes reduced to  57 \n",
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  48 genes reduced to  45 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in getGeneSim(g[[i]], g[[j]], similarity = \"max\", similarityTerm = \"Resnik\", :\n",
+      "“Similarity matrix contains values > 1! This may happen with simlarity='funSimMax', if one gene's GO annotation is a complete subset of another gene's GO annotation.”"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  59 genes reduced to  57 \n",
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  55 genes reduced to  51 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in getGeneSim(g[[i]], g[[j]], similarity = \"max\", similarityTerm = \"Resnik\", :\n",
+      "“Similarity matrix contains values > 1! This may happen with simlarity='funSimMax', if one gene's GO annotation is a complete subset of another gene's GO annotation.”"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  26 genes reduced to  24 \n",
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  29 genes reduced to  27 \n",
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  26 genes reduced to  24 \n",
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  48 genes reduced to  45 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in getGeneSim(g[[i]], g[[j]], similarity = \"max\", similarityTerm = \"Resnik\", :\n",
+      "“Similarity matrix contains values > 1! This may happen with simlarity='funSimMax', if one gene's GO annotation is a complete subset of another gene's GO annotation.”"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  26 genes reduced to  24 \n",
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  55 genes reduced to  51 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in getGeneSim(g[[i]], g[[j]], similarity = \"max\", similarityTerm = \"Resnik\", :\n",
+      "“Similarity matrix contains values > 1! This may happen with simlarity='funSimMax', if one gene's GO annotation is a complete subset of another gene's GO annotation.”"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  29 genes reduced to  27 \n",
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  48 genes reduced to  45 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in getGeneSim(g[[i]], g[[j]], similarity = \"max\", similarityTerm = \"Resnik\", :\n",
+      "“Similarity matrix contains values > 1! This may happen with simlarity='funSimMax', if one gene's GO annotation is a complete subset of another gene's GO annotation.”"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  29 genes reduced to  27 \n",
+      "filtering out genes not mapping to the currently set GO category ... ===> list of  55 genes reduced to  51 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in getGeneSim(g[[i]], g[[j]], similarity = \"max\", similarityTerm = \"Resnik\", :\n",
+      "“Similarity matrix contains values > 1! This may happen with simlarity='funSimMax', if one gene's GO annotation is a complete subset of another gene's GO annotation.”"
+     ]
     }
    ],
    "source": [
