vectorized some methods

--- a/yeast.ipynb
+++ b/yeast.ipynb
@@ -168,7 +168,21 @@
       "\n",
       "e_en=0.2\n",
       "running GHSOM and saving to yeast_reactome_hierarchy_communities_0.2_0.2.pkl\n",
-      "Layer: 1, training epoch: 1634/10000, size of map: 9, network size: 1137, MQE: 0.551638330463, target: 0.493132548716, deleted_neurons: 0                    "
+      "Layer: 2, training epoch: 9999/10000, size of map: 4, network size: 18, MQE: 0.316612806298, target: 0.240885275873, deleted_neurons: 0                       \n",
+      "number of communities detected: 10, saved map to yeast_reactome_hierarchy_communities_0.2_0.2\n",
+      "made directory yeast_reactome_hierarchy_communities_0.2_0.2\n",
+      "moved to yeast_reactome_hierarchy_communities_0.2_0.2\n",
+      "wrote all_genes.txt\n",
+      "wrote shortest path matrix and saved as 01_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-02_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-09_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-10_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-09-05_shortest_path.csv\n",
+      "wrote assignment matrix and saved it as assignment_matrix.csv\n",
+      "\n",
+      "e_en=0.1\n",
+      "running GHSOM and saving to yeast_reactome_hierarchy_communities_0.2_0.1.pkl\n",
+      "Layer: 1, training epoch: 262/10000, size of map: 8, network size: 1137, MQE: 0.590987150275, target: 0.49366532742, deleted_neurons: 0                     "
      ]
     }
    ],
