--- a/ghsom.ipynb
+++ b/ghsom.ipynb
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -869,13 +869,13 @@
    "source": [
     "params = {'eta': 0.0001,\n",
     "         'sigma': 1,\n",
-    "          'e_sg': 0.3,\n",
-    "         'e_en': 0.3}"
+    "          'e_sg': 0.8,\n",
+    "         'e_en': 0.1}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -884,13 +884,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Layer: 1, training epoch: 8594/10000, size of map: 5, network size: 1137, MQE: 0.879396182501, target: 0.739759976                    "
+      "Layer: 4, training epoch: 999/1000, size of map: 2, network size: 15, MQE: 3.16291867918, target: 2.76167589053                    CPU times: user 4min 20s, sys: 21.4 s, total: 4min 41s\n",
+      "Wall time: 4min 21s\n"
      ]
     }
    ],
    "source": [
     "%%time \n",
-    "G, network = main_no_labels(params=params, gml_filename=\"embedded_yeast_reactome.gml\")"
+    "G, network = main_no_labels(params=params, gml_filename=\"embedded_yeast_uetz.gml\", lam=1000)"
    ]
   },
   {
