--- a/ghsom.ipynb
+++ b/ghsom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -377,132 +377,7 @@
     "        #connect to error unit and closest neighbour\n",
     "        network.add_edge(n, id)\n",
     "        network.add_edge(error_unit, id)\n",
-    "        \n",
-    "# ##function to expand som using given error unit\n",
-    "# def expand_network(network, error_unit):\n",
-    "    \n",
-    "#     #identify neighbour pointing furthest away\n",
-    "#     error_unit_neighbours = network.neighbors(error_unit)\n",
-    "    \n",
-    "#     #id of new node\n",
-    "#     id = max(network) + 1\n",
-    "    \n",
-    "#     #v of error unit\n",
-    "#     ve = network.node[error_unit]['v']\n",
-    "    \n",
-    "#     #dimension\n",
-    "#     d = len(ve)\n",
-    "    \n",
-    "#     ##\n",
-    "#     if len(error_unit_neighbours) == 0:\n",
-    "#         ##random position\n",
-    "        \n",
-    "#         ##position\n",
-    "#         network.add_node(id)\n",
-    "        \n",
-    "#         ##weight    \n",
-    "#         v = 2 * (np.random.rand(d) - 0.5) * 1e-2\n",
-    "#         network.node[id]['v'] = v\n",
     "\n",
-    "#         ##list of closest nodes\n",
-    "#         ls = []\n",
-    "#         network.node[id]['ls'] = ls\n",
-    "\n",
-    "#         ##error of neuron\n",
-    "#         e = 0\n",
-    "#         network.node[id]['e'] = e\n",
-    "        \n",
-    "#         ##som for neuron\n",
-    "#         n = []\n",
-    "#         network.node[id]['n'] = n\n",
-    "        \n",
-    "#         ##add edge\n",
-    "#         network.add_edge(error_unit, id)\n",
-    "        \n",
-    "#     elif len(error_unit_neighbours) == 1:\n",
-    "        \n",
-    "#         #neighbour\n",
-    "#         neighbour = error_unit_neighbours[0]\n",
-    "        \n",
-    "#         #v of neighbour\n",
-    "#         vn = network.node[neighbour]['v']\n",
-    "        \n",
-    "#         ##position\n",
-    "#         network.add_node(id)\n",
-    "        \n",
-    "#         ##weight    \n",
-    "#         v = (ve + vn) / 2\n",
-    "#         network.node[id]['v'] = v\n",
-    "\n",
-    "#         ##list of closest nodes\n",
-    "#         ls = []\n",
-    "#         network.node[id]['ls'] = ls\n",
-    "\n",
-    "#         ##error of neuron\n",
-    "#         e = 0\n",
-    "#         network.node[id]['e'] = e\n",
-    "        \n",
-    "#         ##som for neuron\n",
-    "#         n = []\n",
-    "#         network.node[id]['n'] = n\n",
-    "        \n",
-    "#         ##add edges\n",
-    "#         network.add_edge(error_unit, id)\n",
-    "#         network.add_edge(neighbour, id)\n",
-    "        \n",
-    "#     else:\n",
-    "\n",
-    "#         #neighbour id\n",
-    "#         n1 = furthest_neuron(network, error_unit, error_unit_neighbours)\n",
-    "        \n",
-    "#         ##v of n1\n",
-    "#         v_n1 = network.node[n1]['v']\n",
-    "            \n",
-    "#         #now we have identified neighbour pointing furthest away in input space\n",
-    "#         #take mean and produce new neuron\n",
-    "        \n",
-    "#         ##must find mutual neighbours\n",
-    "#         neighbour_neighbours = network.neighbors(n1)\n",
-    "        \n",
-    "#         ##mutual neighbours\n",
-    "#         mutual_neighbours = [n for n in error_unit_neighbours if n in neighbour_neighbours]\n",
-    "        \n",
-    "#         ##second furthest node\n",
-    "#         n2 = furthest_neuron(network, error_unit, mutual_neighbours)\n",
-    "        \n",
-    "#         #v of n2\n",
-    "#         v_n2 = network.node[n2]['v']\n",
-    "        \n",
-    "#         ##position\n",
-    "#         network.add_node(id)\n",
-    "        \n",
-    "#         ##weight    \n",
-    "#         v = (ve + v_n1 + v_n2) / 3\n",
-    "#         network.node[id]['v'] = v\n",
-    "\n",
-    "#         ##list of closest nodes\n",
-    "#         ls = []\n",
-    "#         network.node[id]['ls'] = ls\n",
-    "\n",
-    "#         ##error of neuron\n",
-    "#         e = 0\n",
-    "#         network.node[id]['e'] = e\n",
-    "        \n",
-    "#         ##som for neuron\n",
-    "#         n = []\n",
-    "#         network.node[id]['n'] = n\n",
-    "        \n",
-    "#         #remove edge from n1 and n2\n",
-    "#         network.remove_edge(n1, n2)\n",
-    "        \n",
-    "#         #connect new node to all nodes that are connected to both neighbours (including error unit)\n",
-    "#         for neuron in network.nodes():\n",
-    "#             if network.has_edge(n1, neuron) and network.has_edge(n2, neuron):\n",
-    "#                 ##add edges\n",
-    "#                 network.add_edge(neuron, id)\n",
-    "        \n",
-    "#         network.add_edge(n1, id)\n",
-    "#         network.add_edge(n2, id)\n",
     "\n",
     "##function to find neuron pointing furthest away in list\n",
     "def furthest_neuron(network, error_unit, ls):\n",
@@ -568,13 +443,8 @@
     "#     N = min(num_nodes, 100)\n",
     "    N = num_nodes\n",
     "    \n",
-    "    if layer == 0:\n",
-    "        ini = 1\n",
-    "    else:\n",
-    "        ini = init\n",
-    "    \n",
     "    #create som for this neuron\n",
-    "    network = initialise_network(X, ini)\n",
+    "    network = initialise_network(X, init)\n",
     "    \n",
     "    ##inital training phase\n",
     "    \n",
@@ -625,10 +495,7 @@
     "        e = network.node[network.nodes()[i]]['e']\n",
     "        \n",
     "        #check error\n",
-    "        if (e > e_en * e_0 and len(ls) > MIN_EXPANSION_SIZE and num_deleted_neurons < 3) or e_0 == np.inf:\n",
-    "\n",
-    "            if e_0 == np.inf:\n",
-    "                e_0 = e\n",
+    "        if (e > e_en * e_0 and len(ls) > MIN_EXPANSION_SIZE and num_deleted_neurons < 3):\n",
     "        \n",
     "            #subgraph\n",
     "            H = G.subgraph(ls)\n",
@@ -848,20 +715,22 @@
     "    \n",
     "    #start layer\n",
     "    layer = 0\n",
+    "    \n",
+    "    X = get_embedding(G)\n",
+    "    \n",
+    "    m = np.mean(X, axis=0)\n",
+    "    MQE_0 = np.mean([np.linalg.norm(x - m) for x in X])\n",
     "\n",
     "    #run ghsom algorithm\n",
     "    network, MQE = ghsom(G, lam, params['eta'],\n",
-    "                         params['sigma'], np.inf, params['e_sg'], params['e_en'], init, layer)\n",
+    "                         params['sigma'], MQE_0, params['e_sg'], params['e_en'], init, layer)\n",
     "    \n",
-    "        \n",
-    "    n, d = network.nodes(data=True)[0]\n",
-    "    \n",
-    "    return G, d['n']\n"
+    "    return G, network\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -870,12 +739,12 @@
     "params = {'eta': 0.0001,\n",
     "         'sigma': 1,\n",
     "          'e_sg': 0.8,\n",
-    "         'e_en': 0.1}"
+    "         'e_en': 0.8}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -884,14 +753,134 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Layer: 4, training epoch: 999/1000, size of map: 2, network size: 15, MQE: 3.16291867918, target: 2.76167589053                    CPU times: user 4min 20s, sys: 21.4 s, total: 4min 41s\n",
-      "Wall time: 4min 21s\n"
+      "Layer: 1, training epoch: 9999/10000, size of map: 3, network size: 176, MQE: 5.44510741618, target: 5.38666973318                     "
      ]
     }
    ],
    "source": [
-    "%%time \n",
-    "G, network = main_no_labels(params=params, gml_filename=\"embedded_yeast_uetz.gml\", lam=1000)"
+    "# %%time \n",
+    "%prun G, networks = main_no_labels(params=params, gml_filename=\"embedded_yeast_uetz.gml\", lam=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def train_1(x, v):\n",
+    "    \n",
+    "    for i in range(10000):\n",
+    "        \n",
+    "        v += np.array([0.0001]) * x - v\n",
+    "        \n",
+    "    return v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = np.zeros(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "v = np.random.uniform(size=(10, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.04796312,  0.38646151,  0.49529617,  0.56798658,  0.43206653,\n",
+       "         0.17356835,  0.29435978,  0.8288629 ,  0.62234394,  0.74051404],\n",
+       "       [ 0.34002349,  0.18842629,  0.78818838,  0.44633586,  0.52650104,\n",
+       "         0.35583285,  0.4596984 ,  0.83822048,  0.16855601,  0.00920292],\n",
+       "       [ 0.77386318,  0.17435395,  0.45648262,  0.79513426,  0.70997831,\n",
+       "         0.04569377,  0.10352529,  0.71342037,  0.56106793,  0.27260139],\n",
+       "       [ 0.09635042,  0.52094695,  0.01411746,  0.39399231,  0.94360131,\n",
+       "         0.64572215,  0.43785749,  0.3513552 ,  0.27922629,  0.46924484],\n",
+       "       [ 0.91724523,  0.18708568,  0.5267329 ,  0.05651305,  0.88911102,\n",
+       "         0.69810843,  0.51243033,  0.21123448,  0.41441248,  0.49245004],\n",
+       "       [ 0.58438655,  0.96363878,  0.70915299,  0.00354427,  0.35951942,\n",
+       "         0.69288692,  0.34674734,  0.96384332,  0.47401215,  0.94988029],\n",
+       "       [ 0.5734977 ,  0.75685148,  0.10582581,  0.73503512,  0.33230438,\n",
+       "         0.28178631,  0.67826522,  0.31588904,  0.31966276,  0.90301622],\n",
+       "       [ 0.06379677,  0.64589609,  0.81305973,  0.02504455,  0.7058676 ,\n",
+       "         0.84531656,  0.78121643,  0.51226416,  0.9852907 ,  0.00438044],\n",
+       "       [ 0.72299592,  0.28476317,  0.08142789,  0.51016912,  0.34051087,\n",
+       "         0.14134941,  0.6228984 ,  0.37499379,  0.39992516,  0.8047215 ],\n",
+       "       [ 0.42332756,  0.04023479,  0.60135568,  0.91018003,  0.16884277,\n",
+       "         0.18210266,  0.76319376,  0.10584647,  0.24075245,  0.05835475]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 loops, best of 3: 69.9 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit train_1(x, v)"
    ]
   },
   {
@@ -901,7 +890,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def train_2(x, v):\n",
+    "    \n",
+    "    return np.array([v])"
+   ]
   }
  ],
  "metadata": {
