--- a/yeast.ipynb
+++ b/yeast.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -12,11 +12,12 @@
      "output_type": "stream",
      "text": [
       "data=yeast_reactome\n",
+      "\n",
       "e_sg=0.3\n",
+      "\n",
       "e_en=0.4\n",
-      "running GHSOM and saving to yeast_reactome_hierarchy_communities_0.3_0.4.pkl\n",
-      "Layer: 2, training epoch: 9999/10000, size of map: 6, network size: 98, MQE: 0.368356252785, target: 0.352562854919, deleted_neurons: 0                      \n",
-      "number of communities detected: 5, saved map to yeast_reactome_hierarchy_communities_0.3_0.4\n",
+      "\n",
+      "yeast_reactome_hierarchy_communities_0.3_0.4.pkl already exists, loading map\n",
       "made directory yeast_reactome_hierarchy_communities_0.3_0.4\n",
       "moved to yeast_reactome_hierarchy_communities_0.3_0.4\n",
       "wrote all_genes.txt\n",
@@ -25,9 +26,8 @@
       "wrote assignment matrix and saved it as assignment_matrix.csv\n",
       "\n",
       "e_en=0.3\n",
-      "running GHSOM and saving to yeast_reactome_hierarchy_communities_0.3_0.3.pkl\n",
-      "Layer: 2, training epoch: 9999/10000, size of map: 6, network size: 98, MQE: 0.361845349661, target: 0.352565250607, deleted_neurons: 0                      \n",
-      "number of communities detected: 5, saved map to yeast_reactome_hierarchy_communities_0.3_0.3\n",
+      "\n",
+      "yeast_reactome_hierarchy_communities_0.3_0.3.pkl already exists, loading map\n",
       "made directory yeast_reactome_hierarchy_communities_0.3_0.3\n",
       "moved to yeast_reactome_hierarchy_communities_0.3_0.3\n",
       "wrote all_genes.txt\n",
@@ -37,9 +37,8 @@
       "wrote assignment matrix and saved it as assignment_matrix.csv\n",
       "\n",
       "e_en=0.2\n",
-      "running GHSOM and saving to yeast_reactome_hierarchy_communities_0.3_0.2.pkl\n",
-      "Layer: 2, training epoch: 9999/10000, size of map: 6, network size: 98, MQE: 0.368725436226, target: 0.352566802817, deleted_neurons: 0                       \n",
-      "number of communities detected: 5, saved map to yeast_reactome_hierarchy_communities_0.3_0.2\n",
+      "\n",
+      "yeast_reactome_hierarchy_communities_0.3_0.2.pkl already exists, loading map\n",
       "made directory yeast_reactome_hierarchy_communities_0.3_0.2\n",
       "moved to yeast_reactome_hierarchy_communities_0.3_0.2\n",
       "wrote all_genes.txt\n",
@@ -71,9 +70,8 @@
       "wrote assignment matrix and saved it as assignment_matrix.csv\n",
       "\n",
       "e_en=0.1\n",
-      "running GHSOM and saving to yeast_reactome_hierarchy_communities_0.3_0.1.pkl\n",
-      "Layer: 3, training epoch: 9999/10000, size of map: 4, network size: 28, MQE: 0.0461427893091, target: 0.0448669687016, deleted_neurons: 0                      \n",
-      "number of communities detected: 5, saved map to yeast_reactome_hierarchy_communities_0.3_0.1\n",
+      "\n",
+      "yeast_reactome_hierarchy_communities_0.3_0.1.pkl already exists, loading map\n",
       "made directory yeast_reactome_hierarchy_communities_0.3_0.1\n",
       "moved to yeast_reactome_hierarchy_communities_0.3_0.1\n",
       "wrote all_genes.txt\n",
@@ -144,10 +142,10 @@
       "wrote assignment matrix and saved it as assignment_matrix.csv\n",
       "\n",
       "e_sg=0.2\n",
+      "\n",
       "e_en=0.4\n",
-      "running GHSOM and saving to yeast_reactome_hierarchy_communities_0.2_0.4.pkl\n",
-      "Layer: 2, training epoch: 9999/10000, size of map: 4, network size: 18, MQE: 0.331090108847, target: 0.240886091394, deleted_neurons: 0                      \n",
-      "number of communities detected: 10, saved map to yeast_reactome_hierarchy_communities_0.2_0.4\n",
+      "\n",
+      "yeast_reactome_hierarchy_communities_0.2_0.4.pkl already exists, loading map\n",
       "made directory yeast_reactome_hierarchy_communities_0.2_0.4\n",
       "moved to yeast_reactome_hierarchy_communities_0.2_0.4\n",
       "wrote all_genes.txt\n",
@@ -156,9 +154,8 @@
       "wrote assignment matrix and saved it as assignment_matrix.csv\n",
       "\n",
       "e_en=0.3\n",
-      "running GHSOM and saving to yeast_reactome_hierarchy_communities_0.2_0.3.pkl\n",
-      "Layer: 2, training epoch: 9999/10000, size of map: 4, network size: 18, MQE: 0.301016823564, target: 0.240887477499, deleted_neurons: 0                       \n",
-      "number of communities detected: 10, saved map to yeast_reactome_hierarchy_communities_0.2_0.3\n",
+      "\n",
+      "yeast_reactome_hierarchy_communities_0.2_0.3.pkl already exists, loading map\n",
       "made directory yeast_reactome_hierarchy_communities_0.2_0.3\n",
       "moved to yeast_reactome_hierarchy_communities_0.2_0.3\n",
       "wrote all_genes.txt\n",
@@ -167,9 +164,8 @@
       "wrote assignment matrix and saved it as assignment_matrix.csv\n",
       "\n",
       "e_en=0.2\n",
-      "running GHSOM and saving to yeast_reactome_hierarchy_communities_0.2_0.2.pkl\n",
-      "Layer: 2, training epoch: 9999/10000, size of map: 4, network size: 18, MQE: 0.316612806298, target: 0.240885275873, deleted_neurons: 0                       \n",
-      "number of communities detected: 10, saved map to yeast_reactome_hierarchy_communities_0.2_0.2\n",
+      "\n",
+      "yeast_reactome_hierarchy_communities_0.2_0.2.pkl already exists, loading map\n",
       "made directory yeast_reactome_hierarchy_communities_0.2_0.2\n",
       "moved to yeast_reactome_hierarchy_communities_0.2_0.2\n",
       "wrote all_genes.txt\n",
@@ -181,8 +177,58 @@
       "wrote assignment matrix and saved it as assignment_matrix.csv\n",
       "\n",
       "e_en=0.1\n",
+      "\n",
       "running GHSOM and saving to yeast_reactome_hierarchy_communities_0.2_0.1.pkl\n",
-      "Layer: 1, training epoch: 262/10000, size of map: 8, network size: 1137, MQE: 0.590987150275, target: 0.49366532742, deleted_neurons: 0                     "
+      "Layer: 2, training epoch: 9999/10000, size of map: 4, network size: 18, MQE: 0.285715834267, target: 0.240885809179                        \n",
+      "number of communities detected: 10, saved map to yeast_reactome_hierarchy_communities_0.2_0.1\n",
+      "made directory yeast_reactome_hierarchy_communities_0.2_0.1\n",
+      "moved to yeast_reactome_hierarchy_communities_0.2_0.1\n",
+      "wrote all_genes.txt\n",
+      "wrote shortest path matrix and saved as 01_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-01_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-02_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-03_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-05_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-06_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-07_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-08_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-09_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-10_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-02-01_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-03-01_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-03-02_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-03-03_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-03-04_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-03-05_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-03-06_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-05-01_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-05-02_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-05-03_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-05-04_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-05-05_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-06-01_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-06-02_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-06-03_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-06-04_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-06-05_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-07-01_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-07-02_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-07-03_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-07-04_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-07-05_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-08-01_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-08-02_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-08-03_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-08-04_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-08-05_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-09-01_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-09-02_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-09-03_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-09-05_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-05-03-01_shortest_path.csv\n",
+      "wrote shortest path matrix and saved as 01-05-03-04_shortest_path.csv\n",
+      "wrote assignment matrix and saved it as assignment_matrix.csv\n",
+      "\n"
      ]
     }
    ],
@@ -331,6 +377,39 @@
     "            np.savetxt(assignment_matrix_file, assignment_matrix, delimiter=\",\", fmt=\"%s\")\n",
     "            print \"wrote assignment matrix and saved it as {}\".format(assignment_matrix_file)\n",
     "            print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ID = \"01-05\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ID.count(\"-\")"
    ]
   },
   {
